opvangen nieuwe gebruiker

--- a/wikitude_object_tracking/index.html
+++ b/wikitude_object_tracking/index.html
@@ -15,7 +15,11 @@
 </head>
 
 <body>
-
+    
+    <!-- <button onClick="buttonClicked();">Click here</button> -->
 <script src="js/object_tracking.js"></script>
 </body>
+<footer>
+    <!-- <button onClick="buttonClicked();">Click here</button> -->
+</footer>
 </html>
