--- a/wikitude_object_tracking/index.html
+++ b/wikitude_object_tracking/index.html
@@ -15,8 +15,11 @@
 </head>
 
 <body>
+    <div>
+  <button onClick="buttonClicked();">Click here</button>
+</div>
     
-    <!-- <button onClick="buttonClicked();">Click here</button> -->
+  
 <script src="js/object_tracking.js"></script>
 </body>
 <footer>
